--- a/public/templates/career.html
+++ b/public/templates/career.html
@@ -60,17 +60,18 @@
 
   <div class="why-choose360notion-bg">
  
-        <div class="container">
-            <h1 class="masthead-subtitle">Careers</h1>
+        <div class="container masthead-text-title">
+            <h1 class="masthead-subtitle  title-size text-center">
+                <b class="masthead-title-big">careers</b>
+            </h1>
         </div>
-    </div>
-
-  
-        <div class="container bg-corlor">
-            <div class="layout layout-stack-sm layout-main-left">
+    
+   <div class="content">
+        <div class="container">
+        <div class="layout layout-stack-sm layout-main-left">
                 <div class="col-sm-8 layout-main">
                     <h4 class="content-title">
-                        <span>You and {siteName} — a perfect match</span>
+                        <span>You and 360notion™ — a perfect match</span>
                     </h4>
 
                     <p>
@@ -141,7 +142,7 @@
                 </div>
 
                 <div class="col-sm-4 layout-sidebar">
-                    <h4 class="content-title">
+                    <h4 class="title-size">
                         <span>Office Location</span>
                     </h4>
 
@@ -165,7 +166,7 @@
 
                     <br><br>
 
-                    <h4 class="content-title">
+                    <h4 class="title-size">
                         <span>Business Hours</span>
                     </h4>
 
@@ -176,9 +177,12 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            
+           <!---->
         </div>
   </div>
+  </div>
+   </div>
     <!--footer-->
     
          <footer class="footer">
