--- a/public/templates/ComposeMessage.html
+++ b/public/templates/ComposeMessage.html
@@ -41,7 +41,7 @@
   <div class="container">
     <div class="navbar-header">
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span> <i class="fa fa-cog"></i> </button>
-      <img class="padding-top" src="../themes/admin/img/logo.png" alt="360notion-Logo"/> </div>
+      <img src="../themes/admin/img/logo.png" alt="360notion-Logo"/> </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <ul class="nav navbar-nav noticebar navbar-left">
         <li class="dropdown"> <a href="./page-notifications.html" class="dropdown-toggle" data-toggle="dropdown"> <i class="fa fa-bell big-font"></i> <span class="navbar-visible-collapsed">&nbsp;Notifications&nbsp;</span> <span class="badge badge-primary">3</span> </a>
