--- a/public/themes/admin/css/mvpready-admin.css
+++ b/public/themes/admin/css/mvpready-admin.css
@@ -708,16 +708,12 @@ background-color:#666634;
 /* !Progress Bars */
 /* ----------------------------------------------- */
 .progress {
-  background-color: #f5f5f5;
-  background-image: -webkit-linear-gradient(top, #ebebeb 0%, #f5f5f5 100%);
-  background-image: linear-gradient(to bottom, #ebebeb 0%, #f5f5f5 100%);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffebebeb', endColorstr='#fff5f5f5', GradientType=0);
+  background-color: #d6d1bd;
 }
 .progress-bar {
-  background-color: #d74b4b;
-  background-image: -webkit-linear-gradient(top, #d74b4b 0%, #c42b2b 100%);
-  background-image: linear-gradient(to bottom, #d74b4b 0%, #c42b2b 100%);
+  background-color: #f0ad08;
+  background-image: -webkit-linear-gradient(top,  #f0ac06 0%, #ffe568 100%);
+  background-image: linear-gradient(to bottom, #f0ac06 0%, #ffe568 110%)
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd74b4b', endColorstr='#ffc42b2b', GradientType=0);
 }
@@ -750,9 +746,9 @@ background-color:#666634;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd9534f', endColorstr='#ffc9302c', GradientType=0);
 }
 .progress-bar-primary {
-  background-color: #d74b4b;
-  background-image: -webkit-linear-gradient(top, #d74b4b 0%, #c42b2b 100%);
-  background-image: linear-gradient(to bottom, #d74b4b 0%, #c42b2b 100%);
+  background-color: #f0ad08;;
+  background-image: -webkit-linear-gradient(top, #f0ac06 0%, #ffe568 100%);
+  background-image: linear-gradient(to bottom, #f0ac06 0%, #ffe568 110%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd74b4b', endColorstr='#ffc42b2b', GradientType=0);
 }
@@ -1313,8 +1309,7 @@ background-color:#666634;
   width: 30px;
   height: 30px;
   display: block;
-  background: #696453;
-  background-color: rgba(47, 67, 84, 0.85);
+  background-color:#4b473a;
   font-size: 13px;
   text-align: center;
   line-height: 30px;
@@ -1327,8 +1322,7 @@ background-color:#666634;
 }
 #back-to-top:hover {
   text-decoration: none;
-  background-color: #4b473a;
-  background-color: rgba(215, 75, 75, 0.85);
+  background-color: #696453;
 }
 #back-to-top i {
   color: #fff;
@@ -2933,3 +2927,82 @@ a:hover, a:focus { color: #666634;
 .send-message-padding { padding-left:15px; padding-right:15px; }
 .padding-top{ padding-top:15px;}
 .form-control { min-width:250px;}
+.feed-image{
+    height: 40px;
+    left: -23px;
+    line-height: 34px;
+    position: absolute;
+    text-align: center;
+    top: 15px;
+    width: 40px;}
+.activity-stream-box{padding:15px; margin-top:15px;background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;}	
+.activity-stream{  margin: 0 0 0 20px;
+    padding: 10px 0 0px 40px;
+    position: relative;
+	
+}
+.activity-actions {
+  padding: 10px 10px;
+  border-top: 1px dotted #ccc;
+}
+.activity-actions:before,
+.activity-actions:after {
+  content: " ";
+  display: table;
+}
+.activity-actions:after {
+  clear: both;
+}
+.activity-actions a {
+  color: #666634;
+  font-size: 13px;
+}
+.activity-actions a:hover {
+  text-decoration: none;
+  color: #4d4d28;
+}
+.activity-actions .pull-left {
+  margin: 0 15px 0 0;
+}
+.activity-actions .pull-right {
+  margin: 0 0 0 15px;
+}
+.activity-comment{
+  border-top: 1px dotted #ccc;}
+.coworker-image-comment img
+   {
+	border: 1px solid #ddd;
+    border-radius: 50px;
+    height: 40px;
+    padding: 1px;
+    width: 40px;
+	}
+.comment-attach-file {
+    background-color: transparent;
+    color: #666634;
+    top:20px;
+    position: absolute;
+	font-size:20px;
+    right: 10px;
+}
+.progress-bar-padding{padding-left:15p; padding-right:25px; min-width:300px; width:100%}
+.progress {
+    margin-bottom: 0px;}
+.progress-margin { margin:auto;}
+.icon-color { color:#f0ad08;}
+.badge {
+    background-color: #f0ad08;
+    border-radius: 10px;
+    color: #fff;
+    display: inline-block;
+    font-size: 12px;
+    line-height: 1;
+    min-width: 10px;
+    padding: 3px 7px;
+    text-align: center;
+    vertical-align: baseline;
+    white-space: nowrap;
+}
